fix ui spacing

--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,8 @@ button:hover {
 .sprite {
   height: 40px;
   width: 40px;
+  align-self: flex-end;
+  margin-left: 10px;
 }
 
 .sidebarStyle {
